@startuml

title __VAGA's Class Diagram__\n

  namespace com.soundlab.dockerizedjavaapi {
    namespace core {
      namespace domain.vaga {
        class com.soundlab.dockerizedjavaapi.core.domain.vaga.VagaCriterio {
            - description : String
            - id : Long
            - name : String
            - vaga_id : Long
'            + Criterio()
'            + equals()
'            + getDescription()
'            + getId()
'            + getName()
'            + getPmd()
'            + getVaga_id()
'            + getWeight()
'            + hashCode()
'            + setDescription()
'            + setId()
'            + setName()
'            + setPmd()
'            + setVaga_id()
'            + setWeight()
'            + toString()
'            # canEqual()
        }
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace core {
      namespace domain.vaga {
        class com.soundlab.dockerizedjavaapi.core.domain.vaga.Vaga {
            - vagaCriterios : List<Criterio>
            - dateCreated : LocalDateTime
            - dateModified : LocalDateTime
            - id : Long
            - location : String
            - longDescription : String
            - ownerId : Long
            - respostas : List<Resposta>
            - shortDescription : String
'            + Vaga()
'            + equals()
'            + getCriterios()
'            + getDateCreated()
'            + getDateModified()
'            + getId()
'            + getLocation()
'            + getLongDescription()
'            + getOwnerId()
'            + getPerfil()
'            + getRespostas()
'            + getRespostasCount()
'            + getShortDescription()
'            + getStatus()
'            + hashCode()
'            + setCriterios()
'            + setDateCreated()
'            + setDateModified()
'            + setId()
'            + setLocation()
'            + setLongDescription()
'            + setOwnerId()
'            + setRespostas()
'            + setShortDescription()
'            + setStatus()
'            + toString()
'            # canEqual()
        }
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace core {
      namespace domain.vaga {
        enum VagaStatus {
          ABERTO
          ENCERRADO
          description
          id
        }
      }
    }
  }
  

  com.soundlab.dockerizedjavaapi.core.domain.vaga.VagaCriterio -up-|> com.soundlab.dockerizedjavaapi.core.AuditableEntity
  com.soundlab.dockerizedjavaapi.core.domain.vaga.VagaCriterio o-- com.soundlab.dockerizedjavaapi.core.Level : pmd
  com.soundlab.dockerizedjavaapi.core.domain.vaga.VagaCriterio o-- com.soundlab.dockerizedjavaapi.core.Level : weight
  com.soundlab.dockerizedjavaapi.core.domain.vaga.Vaga -up-|> com.soundlab.dockerizedjavaapi.core.AuditableEntity
  com.soundlab.dockerizedjavaapi.core.domain.vaga.Vaga o-- com.soundlab.dockerizedjavaapi.core.domain.vaga.VagaStatus : status


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
